[gd_scene load_steps=9 format=2]

[ext_resource path="res://addons/GameTemplate/Assets/Fonts/pixellocale_8.tres" type="DynamicFont" id=1]
[ext_resource path="res://Assets/Sprites/Building/DamPreview.png" type="Texture" id=2]
[ext_resource path="res://Assets/Sprites/Building/PumpPreview.png" type="Texture" id=3]
[ext_resource path="res://Assets/Sprites/Building/House.png" type="Texture" id=4]
[ext_resource path="res://addons/GameTemplate/Assets/Fonts/pixellocale_64.tres" type="DynamicFont" id=5]
[ext_resource path="res://HUD/BuildMenu.gd" type="Script" id=6]
[ext_resource path="res://Assets/Sprites/Building/BridgePreview.png" type="Texture" id=7]

[sub_resource type="Theme" id=1]
default_font = ExtResource( 1 )

[node name="BuildMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
script = ExtResource( 6 )

[node name="BuildButton" type="Button" parent="."]
anchor_top = 0.968
anchor_bottom = 0.968
margin_left = 5.0
margin_top = -19.92
margin_right = 42.0
margin_bottom = 0.0800018
mouse_default_cursor_shape = 2
custom_fonts/font = ExtResource( 5 )
text = "Build"

[node name="BuildPanel" type="TabContainer" parent="."]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -227.0
margin_top = -55.0
mouse_filter = 2
theme = SubResource( 1 )
custom_fonts/font = ExtResource( 5 )
tabs_visible = false
use_hidden_tabs_for_min_size = true

[node name="Misc" type="Tabs" parent="BuildPanel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 8.0
margin_right = -4.0
margin_bottom = -4.0
mouse_filter = 1

[node name="HBoxContainer" type="HBoxContainer" parent="BuildPanel/Misc"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -106.0
margin_right = 106.0
margin_bottom = 47.0

[node name="ItemList" type="ItemList" parent="BuildPanel/Misc/HBoxContainer"]
margin_right = 180.0
margin_bottom = 47.0
rect_min_size = Vector2( 180, 0 )
mouse_default_cursor_shape = 2
custom_fonts/font = ExtResource( 5 )
items = [ "Dam", ExtResource( 2 ), false, "House", ExtResource( 4 ), false, "Pump", ExtResource( 3 ), false, "Bridge", ExtResource( 7 ), false ]
allow_reselect = true
auto_height = true
max_columns = 5
same_column_width = true
icon_mode = 0
fixed_icon_size = Vector2( 16, 16 )

[node name="CostTracker" type="VBoxContainer" parent="BuildPanel/Misc/HBoxContainer"]
margin_left = 184.0
margin_right = 212.0
margin_bottom = 47.0

[node name="Label" type="Label" parent="BuildPanel/Misc/HBoxContainer/CostTracker"]
margin_right = 28.0
margin_bottom = 14.0
custom_fonts/font = ExtResource( 5 )
text = "Cost:"

[node name="Cost" type="Label" parent="BuildPanel/Misc/HBoxContainer/CostTracker"]
margin_top = 18.0
margin_right = 28.0
margin_bottom = 32.0
custom_fonts/font = ExtResource( 5 )
text = "000â‚¬"

[connection signal="gui_input" from="BuildPanel/Misc/HBoxContainer/ItemList" to="." method="_on_ItemList_gui_input"]
[connection signal="item_selected" from="BuildPanel/Misc/HBoxContainer/ItemList" to="." method="_on_ItemList_misc_item_selected"]
